# nlfem

./: .dockerignore  .gitlab-ci.yml  CMakeCache.txt  CMakeLists.txt  Cassemble.cpp  Cassemble.h  Cassemble.pxd  Dockerfile  NOTES.md  Notes.ipynb  README.md  README.rst  assemble.py  assemble.pyx  assemble_.py  aux.py  bermuda.cpp  cg_nonlocal.py  checkInterfaceKernel.py  check_largeA.py  chiffre.c  clinalg.cpp  conf.py  convergence_rate.py  convergence_rate_conf.py  cythonize.md  graph.cpp  linalg.cpp  linalg.pxd  linalg.pyx  math_helper.pxd  math_helper.pyx  nbhd.py  nlocal.html  nlocal.py  nlocal.pyx  nlocal_.py  parallel_efficiency.md  plot.py  quadpoints.py  (+17 more)
cython/: assemble.pyx  debug.pyx  nlcfem.pyx  nlfem.cpp  nlfem.pyx  setup.py  setup_staticLink.py
data/: circle.geo  circle_huge.msh  rectangle.geo
docker/: jupyter_notebook_config.py
docs/: Doxyfile  README.md
docs/html/: Cassemble2D_8cpp_source.html  Cassemble2D_8h_source.html  Cassemble_8cpp.html  Cassemble_8cpp_source.html  Cassemble_8h_source.html  MeshBuilder_8cpp_source.html  MeshBuilder_8h_source.html  MeshTypes_8cpp_source.html  MeshTypes_8h_source.html  ____init_____8py.html  _a_s_s_e_m_b_l_y_8py.html  _a_s_s_e_m_b_l_y_8py.js  _c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_815_83_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _c_make_files_23_815_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_815_83_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c__incl.dot  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8c__incl.md5  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp.html  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp__incl.dot  _c_make_files_2_find_open_m_p_2_open_m_p_check_version_8cpp__incl.md5  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c.html  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c__incl.dot  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8c__incl.md5  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8cpp.html  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8cpp__incl.dot  _c_make_files_2_find_open_m_p_2_open_m_p_try_flag_8cpp__incl.md5  _cassemble2_d_8cpp.html  _cassemble2_d_8cpp.js  _cassemble2_d_8cpp__incl.dot  _cassemble2_d_8cpp__incl.md5  _cassemble2_d_8h.html  _cassemble2_d_8h.js  _cassemble2_d_8h__dep__incl.dot  _cassemble2_d_8h__dep__incl.md5  _cassemble2_d_8h_source.html  _cassemble_8cpp.html  _cassemble_8cpp.js  _cassemble_8cpp__incl.dot  (+349 more)
docs/html/search/: all_0.js  (+109 more)
docs/source/: conf.py  index.rst
examples/CompareCodes/: CMakeLists.txt  CompareCodes  checkMETIS.py  comparecodes.cpp  conf.py  mesh.py  sp_Ad
examples/CompareCodes/data/: conf  mesh.conf  mesh.elelb  mesh.elemt  mesh.neigh  mesh.verts  quad.Px  quad.Py  quad.dx  quad.dy  result.fd  result.partition
examples/DomainDecomposition/: SubdivideMesh.py  SubdivideMesh_.py  bib3.py  conf.py  nlocal.py  solve_DD.py  solve_nonlocal.py  solve_twoDomain.py  test_gmsh_DD.py
examples/DuffyTransformation/: DuffyTransformationElalstostatics.ipynb  DuffyTransformationElastostatics.ipynb  duffyconf.py
examples/FireExtinguisher/: MESH_nonreg.py  bib3.py  computeRates2D.py  helpers.py  mesh.py  testALL.py  testConfAverage.py  testConfBarycenter.py  testConfLinf.py  testConfShifted.py  testConfWCCM1.py  testConfWCCM2.py
examples/Rates1D/: computeRates1D.py  conf.py  mesh.py
examples/Rates2D/: ASSEMBLY.py  ASSEMBLY_nonreg.py  DEPRICATED_ASSEMBLY.py  DEPRICATED_L2_rates.py  L2_rates.py  L2_rates_nonreg_scipyinterp.py  MAIN_2d.py  MESH_nonreg.py  MassMatrix.py  SOLVE.py  SOLVE_nonreg.py  ___DEPRICATED_ASSEMBLY.py  ___DEPRICATED_L2_rates_nonreg.py  ___preparemesh_test.py  ___test_gmsh.py  ___test_nonreg_mesh.py  bib3.py  computeRates2D.py  conf.py  conf2.py  configuration.py  mesh.py  nlocal.py  preparemesh_test.py  testStiffnes.py
examples/Rates2DCpp/: CMakeLists.txt  convergence2D.cpp
examples/Rates2D_irreg/: ASSEMBLY.py
examples/Rates2D_reg/: ASSEMBLY.py  L2_rates.py  SOLVE.py  bib3.py  computeRates2D.py  conf.py  nlocal.py
examples/RatesScipy/: computeRates2D.py  conf.py  helpers.py  mesh.py
examples/RatesScipy3D/: computeRates3D.py  conf3D.py  helpers.py  mesh.py  write.py
examples/SolveandPlot/: aux.py  check_circleIntegral.py  conf.py  nlocal.py  plot.py  solve_nonlocal.py  testCassemble.py  toVtk.py
examples/Test2D/: Configuration.py  computeLocalConv2D.py  computeRates2D.py  createTables2D.py  helpers.py  mesh.py  testConfConstant.py  testConfExactCaps.py  testConfFractional.out  testConfFractional.py  testConfFull.py  testConfPeridyn.py  testConfPeridynamics.py  testConfWCCM1.py  testConfWCCM2.py  testLinfty.py
examples/Tutorial/: conf.py  main.py  mesh.py  plot.py  tutorial.ipynb
examples/test2D/: helpers.py
examples/tutorial/: conf.py  main.py  mesh.py  plot.py  quadrules.py  tutorial.ipynb
include/: Cassemble.h  Cassemble.pxd  Cassemble2D.h  Cassemble2D.pxd  Configuration.h  Configuration.pxd  ConfigurationType.h  ConfigurationType.pxd  Kernel.h  Load.h  Mesh.h  Mesh.pxd  MeshBuilder.h  MeshType.h  MeshType.pxd  MeshTypes.cpp  MeshTypes.h  Quadrature.h  Quadrature.pxd  QuadratureType.h  QuadratureType.pxd  armadillo.pxd  kernel.cpp
logs/: TestLog.md
python/: bib3.py  check_circleIntegral.py  conf.py  helpers.py  nbhd.py  nlocal.py  plot.py  rectangle.geo  solve_nonlocal.py  testCassemble.py  toVtk.py
src/: Cassemble.cpp  Cassemble2D.cpp  Configuration.cpp  ConfigurationType.cpp  Index.cpp  Index.h  Integrator.cpp  Integrator.h  Kernel.cpp  Load.cpp  Mesh.cpp  MeshBuilder.cpp  MeshBuilder.h  MeshType.cpp  MeshTypes.cpp  Quadrature.cpp  QuadratureType.cpp  checks.cpp  configuration.cpp  configuration.h  index.cpp  index.h  integration.cpp  integration.h  kernel.cpp  kernel.h  mathhelpers.cpp  mathhelpers.h  mesh.cpp  mesh.h  model.cpp  model.h  quadrature.cpp  quadrature.h  test.cpp
tests/: assembleTest.cpp  mergeConfilct  mergeConflict
(+101 files in other folders)
